sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/DD_Grid_Report_Field__mdt.object-meta.xml
<CustomObject>
    <label>DD Grid Report Field</label>
    <pluralLabel>DD Grid Report Fields</pluralLabel>
</CustomObject>