sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/fields/Cell_Attributes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Cell_Attributes_JSON__c</fullName>
    <label>Cell Attributes JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>