sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/fields/Default_Sort__c.field-meta.xml
<CustomField>
    <fullName>Default_Sort__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Sort</label>
    <type>Checkbox</type>
</CustomField>