sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/fields/Default_Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Default_Sort_Direction__c</fullName>
    <label>Default Sort Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>asc</fullName>
                <default>true</default>
                <label>asc</label>
            </value>
            <value>
                <fullName>desc</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>