sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/fields/Initial_Width__c.field-meta.xml
<CustomField>
    <fullName>Initial_Width__c</fullName>
    <label>Initial Width</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>