sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <referenceTo>DD_Grid_Report_Master__mdt</referenceTo>
    <relationshipLabel>DD Grid Report Fields</relationshipLabel>
    <relationshipName>DD_Grid_Report_Fields</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>