sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/fields/Sort_Nulls_Config__c.field-meta.xml
<CustomField>
    <fullName>Sort_Nulls_Config__c</fullName>
    <description>Configuration to decide whether null values should be displayed first or last.</description>
    <label>Sort Nulls Config</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>nulls first</fullName>
                <default>true</default>
                <label>nulls first</label>
            </value>
            <value>
                <fullName>nulls last</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>