sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/fields/Sortable__c.field-meta.xml
<CustomField>
    <fullName>Sortable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sortable</label>
    <type>Checkbox</type>
</CustomField>