sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/fields/Type_Attributes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Type_Attributes_JSON__c</fullName>
    <inlineHelpText>Please validate the JSON on jsonlint.com - its better to paste the valid formatted JSON from the output of jsonlint.com</inlineHelpText>
    <label>Type Attributes JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>