sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/validationRules/Default_Sort_Order_Requried.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Sort_Order_Requried</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   Default_Sort__c ,
   ISBLANK(TEXT( Default_Sort_Direction__c ))
)</errorConditionFormula>
    <errorDisplayField>Default_Sort_Direction__c</errorDisplayField>
    <errorMessage>Default Sort order is required.</errorMessage>
</ValidationRule>