sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/validationRules/Default_Sortable_Invalid.validationRule-meta.xml
<ValidationRule>
    <fullName>Default_Sortable_Invalid</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   Default_Sort__c ,
   NOT( Sortable__c )
)</errorConditionFormula>
    <errorDisplayField>Default_Sort__c</errorDisplayField>
    <errorMessage>Default Sort can be set only on a &quot;Sortable&quot; field</errorMessage>
</ValidationRule>