sfdx-source/force-app/main/default/objects/DD_Grid_Report_Field__mdt/validationRules/Type_Attribute_JSON_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_Attribute_JSON_is_required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
 OR (
   ISPICKVAL( Type__c , &apos;action&apos;) ,
   ISPICKVAL( Type__c , &apos;currency&apos;) ,
   ISPICKVAL( Type__c , &apos;url&apos;) ,
   ISPICKVAL( Type__c , &apos;recordUrl&apos;)
 ),
 ISBLANK(Type_Attributes_JSON__c)
)</errorConditionFormula>
    <errorDisplayField>Type_Attributes_JSON__c</errorDisplayField>
    <errorMessage>This field is required for this type.</errorMessage>
</ValidationRule>